<resources>
    <string name="app_name">rePerks</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sign_in">Login</string>
    <string name="action_Register">Register</string>
    <string name="welcomeTorePerks">Welcome to <font color='#49854A'>\n re</font>Perks</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? <font color='#49854A'>Register.</font></string>
    <string name="Already_have_an_account_Login">Already have an account? <font color='#49854A'>Login.</font></string>
    <string name="sign_up">Sign <font color='#49854A'>Up</font></string>
    <string name="login">Login</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>

    <string name="Hi_Akshat"> Hi,<font color='49854A'>Akshat!</font></string>
    <string name="Hi"><font color='0C0C0C'>Hi</font></string>
    <string name="todo">TODO</string>
    <string name="background">background</string>
    <string name="scan_qr">Scan QR</string>
    <string name="scan_the_qr_code_once_you_have_deposited_your_waste">Scan the QR code once you have deposited your waste.</string>
    <string name="rewards">Rewards</string>
    <string name="claim_your_rewards">Claim your rewards !!</string>
    <string name="bin_sites">Bin Sites</string>
    <string name="location_of_our_bins">Location of our bins</string>
    <string name="list_of_all_your_previous_waste_deposits">List of all your previous waste deposits</string>
    <string name="history">History</string>
    <string name="todo_1">TODO</string>
    <string name="contd">TODO</string>
    <string name="contentd3">TODO</string>
    <string name="contentd4">TODO</string>
    <string name="let_s_contribute_to_our_planet">Let\'s contribute to our planet</string>
    <string name="pass">Password</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="hi_text">Hi</string>
    <string name="rewards_frag">Rewards</string>
    <string name="reward_point_str">12000</string>
    <string name="amazon_gift_card">Amazon Gift Card</string>
    <string name="quine_membership">Quine Membership</string>
    <string name="turn_trash_into_">Turn Trash into Rewards with rePerks : Recycling made Rewarding</string>
    <string name="_500_rs_gift_card">INR 500 Gift Card</string>
</resources>