<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_button"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/vector_1"
        android:layout_width="fill_parent"
        android:layout_height="700dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@drawable/vector_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/scan_qr"
        android:layout_width="163dp"
        android:layout_height="64dp"
        android:layout_alignStart="@+id/rectangle_6"
        android:layout_alignTop="@+id/rectangle_6"
        android:layout_alignEnd="@+id/rectangle_6"
        android:layout_alignBottom="@+id/rectangle_6"
        android:layout_marginStart="-32dp"
        android:layout_marginTop="-12dp"
        android:layout_marginEnd="182dp"
        android:layout_marginBottom="81dp"
        android:elevation="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/scan_qr"
        android:textColor="#31300A"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_8"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rectangle_8"
        app:layout_constraintTop_toTopOf="@+id/rectangle_8"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/subtext"
        android:layout_width="366dp"
        android:layout_height="32dp"
        android:layout_below="@+id/Hi_txt"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="-7dp"
        android:layout_marginEnd="18dp"
        android:contentDescription="@string/background"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/let_s_contribute_to_our_planet"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <!--    scanqr rectangle-->

    <!--    rewards rectangle-->
    <ImageButton
        android:id="@+id/rectangle_6"
        android:layout_width="312dp"
        android:layout_height="127dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="126dp"
        android:background="@drawable/rectangle_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_8" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/rectangle_6"
        android:layout_alignTop="@+id/rectangle_6"
        android:layout_alignEnd="@+id/rectangle_6"
        android:layout_alignBottom="@+id/rectangle_6"
        android:layout_marginStart="155dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="-8dp"
        android:layout_marginBottom="-2dp"
        android:background="@drawable/handscan"
        android:contentDescription="@string/todo_1" />


    <!--    history rectangle-->

    <!--    bin sites rectangle-->


    <!--    hi text-->

    <ImageButton
        android:id="@+id/rectangle_8"
        android:layout_width="312dp"
        android:layout_height="136dp"
        android:layout_below="@+id/rectangle_6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="51dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/rectangle_8"
        app:layout_constraintBottom_toBottomOf="@+id/vector_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Hi_txt"
        app:layout_constraintVertical_bias="0.108" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/rectangle_8"
        android:layout_alignTop="@+id/rectangle_8"
        android:layout_alignEnd="@+id/rectangle_8"
        android:layout_alignBottom="@+id/rectangle_8"
        android:layout_marginStart="148dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="-16dp"
        android:layout_marginBottom="-10dp"
        android:background="@drawable/rewardshand"
        android:contentDescription="@string/contentd3" />

    <ImageButton
        android:id="@+id/rectangle_7"
        android:layout_width="142dp"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="222dp"
        android:layout_marginTop="463dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/rectangle_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_6" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/rectangle_7"
        android:layout_alignTop="@+id/rectangle_7"
        android:layout_alignEnd="@+id/rectangle_7"
        android:layout_alignBottom="@+id/rectangle_7"
        android:layout_marginStart="46dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/history"
        android:contentDescription="@string/contentd4" />

    <ImageButton
        android:id="@+id/rectangle_9"
        android:layout_width="142dp"
        android:layout_height="131dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="462dp"
        android:layout_marginEnd="214dp"
        android:background="@drawable/rectangle_9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_6" />

    <!--    rewards text-->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/rectangle_9"
        android:layout_alignTop="@+id/rectangle_9"
        android:layout_alignEnd="@+id/rectangle_9"
        android:layout_alignBottom="@+id/rectangle_9"
        android:layout_marginStart="44dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/binsitepng"
        android:contentDescription="@string/contd" />


    <TextView
        android:id="@+id/Hi_txt"
        android:layout_width="83dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/background"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/Hi"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/scansub"
        android:layout_width="295dp"
        android:layout_height="38dp"
        android:layout_alignStart="@+id/rectangle_6"
        android:layout_alignTop="@+id/rectangle_6"
        android:layout_alignEnd="@+id/rectangle_6"
        android:layout_alignBottom="@+id/rectangle_6"
        android:layout_marginStart="14dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="54dp"
        android:fontFamily="@font/poppins_medium"
        android:maxLines="2"
        android:text="@string/scan_the_qr_code_once_you_have_deposited_your_waste"
        android:textColor="#65644A"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rectangle_8"
        app:layout_constraintTop_toBottomOf="@+id/scan_qr" />

    <TextView
        android:id="@+id/rewards_txt"
        android:layout_width="163dp"
        android:layout_height="64dp"
        android:layout_alignStart="@+id/rectangle_8"
        android:layout_alignTop="@+id/rectangle_8"
        android:layout_alignEnd="@+id/rectangle_8"
        android:layout_alignBottom="@+id/rectangle_8"
        android:layout_marginStart="-18dp"
        android:layout_marginTop="-6dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="75dp"
        android:elevation="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/rewards"
        android:textColor="#31300A"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_8"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rectangle_8"
        app:layout_constraintTop_toTopOf="@+id/rectangle_8"
        app:layout_constraintVertical_bias="0.0" />
    <!--    subtext for rewards-->
    <TextView
        android:id="@+id/rewardssub"
        android:layout_width="344dp"
        android:layout_height="37dp"
        android:layout_alignTop="@+id/rectangle_8"
        android:layout_alignEnd="@+id/rectangle_8"
        android:layout_alignBottom="@+id/rectangle_8"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="-51dp"
        android:layout_marginBottom="54dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/claim_your_rewards"
        android:textColor="#65644A"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rectangle_8"
        app:layout_constraintTop_toBottomOf="@+id/scan_qr" />

    <!--    bin sites text-->

    <!--    binsites subtext-->

    <!--    History-->
    <!--    history subtext-->

    <TextView
        android:id="@+id/binsite_txt"
        android:layout_width="163dp"
        android:layout_height="64dp"
        android:layout_alignStart="@+id/rectangle_9"
        android:layout_alignTop="@+id/rectangle_9"
        android:layout_alignEnd="@+id/rectangle_9"
        android:layout_alignBottom="@+id/rectangle_9"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="-7dp"
        android:layout_marginEnd="-11dp"
        android:layout_marginBottom="77dp"
        android:elevation="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/bin_sites"
        android:textColor="#31300A"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_8"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rectangle_8"
        app:layout_constraintTop_toTopOf="@+id/rectangle_8"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/binsitesub"
        android:layout_width="109dp"
        android:layout_height="45dp"
        android:layout_alignStart="@+id/rectangle_9"
        android:layout_alignTop="@+id/rectangle_9"
        android:layout_alignEnd="@+id/rectangle_9"
        android:layout_alignBottom="@+id/rectangle_9"
        android:layout_marginStart="15dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/location_of_our_bins"
        android:textColor="#65644A"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rectangle_8"
        app:layout_constraintTop_toBottomOf="@+id/scan_qr" />

    <TextView
        android:id="@+id/history_txt"
        android:layout_width="163dp"
        android:layout_height="64dp"
        android:layout_alignStart="@+id/rectangle_7"
        android:layout_alignTop="@+id/rectangle_7"
        android:layout_alignEnd="@+id/rectangle_7"
        android:layout_alignBottom="@+id/rectangle_7"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="-7dp"
        android:layout_marginEnd="-11dp"
        android:layout_marginBottom="79dp"
        android:elevation="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/history"
        android:textColor="#31300A"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_8"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rectangle_8"
        app:layout_constraintTop_toTopOf="@+id/rectangle_8"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/historysub"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignStart="@+id/rectangle_9"
        android:layout_alignTop="@+id/rectangle_9"
        android:layout_alignEnd="@+id/rectangle_9"
        android:layout_alignBottom="@+id/rectangle_9"
        android:layout_marginStart="177dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="-159dp"
        android:layout_marginBottom="46dp"
        android:fontFamily="@font/poppins_medium"
        android:maxLines="3"
        android:text="@string/list_of_all_your_previous_waste_deposits"
        android:textAlignment="center"
        android:textColor="#65644A"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rectangle_8"
        app:layout_constraintTop_toBottomOf="@+id/scan_qr" />

</RelativeLayout>