<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layoutDescription="@xml/fragment_login_scene"
    tools:context=".LoginFragment">

    <ImageButton
        android:id="@+id/back_buttonLp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/frame"
        app:layout_constraintBottom_toTopOf="@+id/Login_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/Login_textView"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="100dp"
        android:layout_height="56dp"
        android:layout_marginTop="114dp"
        android:width="20dp"
        android:fontFamily="@font/poppins_bold"
        android:selectAllOnFocus="false"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/off_black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/phone_text"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/Email"
        android:textColor="@color/off_black"
        app:layout_constraintBottom_toTopOf="@+id/phone_box"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_box"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="114dp"
        app:boxStrokeWidth="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoLink="email"
            android:background="@drawable/rectangle_2"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/password_text"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="56dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/password"
        android:textColor="@color/off_black"
        app:layout_constraintBottom_toTopOf="@+id/password_rect"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_rect"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        app:boxStrokeWidth="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_box"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/sec_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rectangle_2"
            android:password="true"
            tools:ignore="Deprecated,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/don_t_have_"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:background="?attr/selectableItemBackground"
        android:elevation="1dp"
        android:fontFamily="@font/poppins"
        android:text="@string/don_t_have_an_account_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_rect"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/ripple_button"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/action_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_rect"
        app:layout_constraintVertical_bias="0.33"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


</androidx.constraintlayout.motion.widget.MotionLayout>